--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,7 @@ pytest-flask==1.3.0
 email-validator==2.1.0.post1
 Werkzeug==2.3.7
 SQLAlchemy==1.4.51
-WTForms==3.1.2 
+WTForms==3.1.2
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.118.0 
