--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ Flask-Migrate==4.1.0
 Flask-Mail==0.9.1
 python-dotenv==1.0.1
 Werkzeug==3.1.0
-SQLAlchemy==1.4.51
+SQLAlchemy>=2.0.16
 WTForms==3.1.2
 
 # Google Calendar Integration
