--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ google-api-python-client==2.120.0
 
 # Validation and Utilities
 email-validator==2.1.0.post1
+requests
 
 # Development and Testing
 pytest==8.0.2
