--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-api-python-client==2.120.0
 # Validation and Utilities
 email-validator==2.1.0.post1
 requests
+filetype
 
 # Development and Testing
 pytest==8.0.2
