--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ google-api-python-client==2.120.0
 email-validator==2.1.0.post1
 requests
 filetype
+duckduckgo-search
+Pillow
 
 # Development and Testing
 pytest==8.0.2
